--- a/css/techstack.css
+++ b/css/techstack.css
@@ -125,13 +125,13 @@ body {
   align-items: center;
   width: 100px;
   text-align: center;
-}
+} 
 
 .tech-item img {
-  width: 60px;
-  height: 60px;
+  width: 70px;
+  height: 70px;
   object-fit: contain;
-  transition: transform 0.3s ease;
+  transition: transform 0.15s ease;
 }
 
 .tech-item img:hover {
